<resources>
    <string name="app_name">InfoSaude</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act_map">"Hospitais Próximos"</string>
    <string name="error_connection">Sem conexão</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirmar Password</string>
    <string name="hint_email">E-mail</string>
    <string name="registrar">Registrar</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="favoritos">Favoritos</string>
    <string name="nome_required">O campo nome é de preenchimento obrigatório</string>
    <string name="password_required">O campo password é de preenchimento obrigatório</string>
    <string name="email_required">O campo e-mail é de preenchimento obrigatório</string>
    <string name="email_invalido">Digite um e-mail válido</string>
    <string name="password_match">Os password digitados devem ser iguais</string>
    <string name="mapa">Mapa</string>
    <string name="usuario_senha_invalida">Nome de usuário ou senha inválidos</string>
    <string name="login_sucesso">Usuário logado com sucesso!</string>
    <string name="cadastro_sucesso">Usuário cadastrado com sucesso!</string>
    <string name="cadastro_erro">Não foi possivel cadastro um usuario com esse e-mail!</string>
    <string name="conexao_erro">Erro ao conectar com o servidor!</string>
    <string name="registre_aqui">Registre Aqui</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
