<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/map_fragment"
            android:title="@string/mapa" />

        <item
            android:id="@+id/favorite_fragment"
            android:icon="@drawable/ic_favorite_black_18dp"
            android:title="@string/favoritos" />

        <item
            android:id="@+id/login_fragment"
            android:icon="@drawable/ic_person_black_18dp"
            android:title="@string/login" />

        <item
            android:id="@+id/register_fragment"
            android:icon="@drawable/ic_person_add_black_18dp"
            android:title="@string/registrar" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_person_add_black_18dp"
            android:title="@string/logout" />
    </group>

</menu>
